Fixed settings on smalls screens

--- a/static/custom.css
+++ b/static/custom.css
@@ -1,5 +1,5 @@
 .custom-white-text {
-    color: #fff;
+    color: #ffffff;
 }
 
 .custom-height-500 {
